# challenges

./: .gitignore  LICENSE  README.md
advent-of-code/2018/: day13-1.clj  day13.md
advent-of-code/2023/: day01-1.clj  day01-2.clj  day01.md  day02-1.clj  day02-2.clj  day02.md  day03-1.clj  day03-2.clj  day03.md  day04.ml
advent-of-code/2023/ocaml/: .ocamlformat  aoc2023.opam  dune-project
advent-of-code/2023/ocaml/descriptions/: day04.md  day05.md  day06.md  day07.md  day09.md  day10.md  day11.md
advent-of-code/2023/ocaml/inputs/: day06-sample.txt
advent-of-code/2023/ocaml/lib/: containers.ml  dune  helpers.ml  parsing.ml
advent-of-code/2023/ocaml/outputs/: day10.txt
codember/: challenge_01.js  challenge_02.js  challenge_03.clj  challenge_03.md  challenge_04.clj  challenge_04.md  challenge_05.clj  challenge_05.md
